# mde

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  sample.md
docs/: tabs-drafts-followups.md
scripts/: install-app.sh  install-cli.sh  install.sh
src/: App.css  App.tsx  CommentsRail.tsx  DraftsPanel.tsx  Editor.tsx  FindBar.tsx  Sidebar.tsx  TabBar.tsx  WorkspaceSearch.tsx  criticMark.ts  criticMarkup.ts  criticPlugin.ts  searchPlugin.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
