[package]
name = "mde"
version = "0.1.0"
description = "Markdown editor"
authors = ["Sherin"]
edition = "2021"

[lib]
name = "mde_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
